[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/1.png" type="Texture" id=1]
[ext_resource path="res://Inimigos/Naves/Ship1/Ship1.gd" type="Script" id=2]
[ext_resource path="res://Inimigos/Naves/Stats_Ship.gd" type="Script" id=3]
[ext_resource path="res://Inimigos/Naves/HurtBox.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 28.4429

[node name="Ship1" type="KinematicBody2D"]
position = Vector2( 2.38419e-07, 3.55271e-14 )
rotation = 3.14159
scale = Vector2( 0.7, 0.7 )
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HurtBox" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 8
collision_mask = 4
script = ExtResource( 4 )

[node name="HurtBoxCollision" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="Stats_Ship" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." groups=["enemies"]]
position = Vector2( 2.12312e-06, 24.2857 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats_Ship" to="." method="_on_Stats_Ship_no_health"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
